# tail_recursion

./: .gitignore  README.rst  pyproject.toml
tail_recursion/: __init__.py  _impl.py
tests/: test_tail_recursion.py
