[tool.poetry]
name = "tail_recursion"
version = "1.0.1"
description = "Tail call recursion in Python"
authors = ["Incomplete <incomplete@aixon.co>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
