[tool.poetry]
name = "tail_recursion"
version = "1.1.0"
description = "Tail call recursion in Python"
authors = ["Incomplete <incomplete@aixon.co>"]

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
